backend refactor: test problem with UserResponse